[metadata]
name=airborne
version=8.68
author=BCDTripTech
author_email=development@bcdtriptech.com

[flake8]
exclude = **/data/*.py,*/migrations/*,venv,.ropeproject/*,./node_modules/*,*/snapshots/*.py,local.py
ignore = D100,D101,D102,D103,D104,D105,D106,D107,D205,D400,D401,W503,W504,I202,Q003
max-complexity = 25
extend-ignore = E203
max-line-length = 88

[coverage:run]
branch = True
# for convenience, default non-jetwing runner
command_line = ./manage.py test -v 2 --parallel
concurrency = multiprocessing
data_file = coverage/python/.coverage
parallel = True
source =
    aft_messages
    airapi
    airborne
    common
    midoffice
    auth
omit =
    **/tests/*
    **/tests/snapshots/*
    **/management/commands/*.py
    **/migrations/*.py

[coverage:html]
directory = coverage/python/html

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError

[django_migration_linter]
ignore_name = # accounts
              0001_squashed_0115_flag
              0002_auto_20190813_1557
              0003_create_jsonb_indexes
              0004_flag
              0005_bcdcompanyprofile_sap_account_number
              0006_gdsprofile_agency_type
              0007_auto_20191024_0357
              0008_auto_20191029_0730
              0009_auto_20191119_0413
              0010_auto_20200207_0217
              0011_auto_20200207_0812
              0012_auto_20200218_0627
              0013_auto_20200215_1233
              0014_bcdcompanyprofile_is_service
              0015_auto_20200512_0824
              0016_guarantee_courtyard_rollout_flag_creation
              0017_auto_20200514_0437
              0018_auto_20200522_0213
              0019_auto_20200723_0737
              0020_set_car_search_radius
              0021_auto_20200906_1022
              0022_auto_20201002_0641
              0023_migrate_permission_groups_to_news
              0024_migrate_users_groups
              0025_migrate_users_permissions
              0026_auto_20200925_0058
              0027_bcduser_allow_access_restricted_companies
              0028_auto_20201124_0715
              0029_auto_20201209_0942
              0030_auto_20210104_0109
              0031_auto_20210128_0345
              0032_auto_20210212_1509
              0033_auto_20210212_1521
              0034_auto_20210120_0624
              0035_auto_20210120_0625
              0036_auto_20210222_0353
              0037_auto_20210323_0129
              0039_delete_worldspan_fields
              0040_auto_20210618_0136
              0041_policygroup
              0042_auto_20220105_0909
              0043_auto_20220202_0036
              0045_auto_20220202_0055
              0047_auto_20220202_0208
              0048_auto_20220204_0059
              0056_bcdcompanyprofile_is_deprecated
              0059_delete_accounts_tmcuseractionlog
              0060_auto_20220701_1244
              0061_guarantee_several_rollout_flag_state
              0062_rename_mock_service_flag
              0069_drop_bcduser_arranged_companies
              0072_drop_recent_hotels
              0074_remove_user_role_from_database
              # aft_messages
              0001_squashed_0002_auto_20190422_0411
              # airapi
              0001_squashed_0010_auto_20190422_0404
              0002_auto_20200217_0512
              0003_auto_20200219_0655
              0004_auto_20200313_0215
              0005_airapiauthapp_hide_commission_details
              0006_auto_20200402_1302
              0007_auto_20200618_0829
              0008_auto_20200721_0919
              0009_auto_20200731_0502
              0010_airapiauthapp_check_entity_id_in_hotel_rate_key
              0011_auto_20200925_0058
              0012_airapiauthapp_allow_access_restricted_companies
              0013_auto_20201124_0715
              0014_auto_20210120_0624
              0015_auto_20210120_0625
              0016_GG28565_air_documents_issue
              0017_auto_20220208_0646
              0019_auto_20220504_0549
              0020_airapiauthapp_allowed_endpoints
              0021_auto_20220720_0152
              0026_remove_airapiauthapp_allowed_methods
              # auditlogs
              0002_auditlog_message_id
              # authotization
              0001_initial
              0002_permissiongroup
              0003_auto_20210212_1509
              0004_auto_20210212_1521
              0005_auto_20210323_0129
              # booking
              0001_squashed_0017_migrate_fakepnr_bookings
              0002_create_jsonb_indexes
              0003_add_created_date_index
              0004_auto_20201011_1332
              0005_auto_20201027_0635
              0006_delete_hotelbookingskipped
              0008_cleanup_hotelbookings_from_db
              # config_export_tool
              0001_initial
              # maintenance
              0001_squashed_0002_auto_20160115_0659
              # oauth2_provider
              0001_initial
              0002_auto_20190406_1805
              0003_auto_20201211_1314
              0004_auto_20200902_2022
              0006_alter_application_client_secret
              0007_application_post_logout_redirect_uris
              # pnrs
              0001_squashed_0016_auto_20190122_0850
              0004_delete_reporting_tables
              # sites
              0001_initial
              0002_alter_domain_unique
              # waffle
              0001_initial
              0002_auto_20161201_0958
              0003_update_strings_for_i18n
              0004_update_everyone_nullbooleanfield
              # auth
              0002_auto_20220729_0330
              0003_auto_20220809_0148
              0004_company_tspm_entity_id
              0005_delete_actorallowedcompanies